--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="scr/styles/styles.css">
     <link rel="stylesheet" href="scr/styles/header.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Berghen Residence</title>
 </head>
 <body>
@@ -60,5 +61,55 @@
             </button>
         </div>
     </header>
+    <main id="content">
+        <section id="home">
+            <div class="shape">
+                
+            </div>
+            <div id="cta">
+                <h1 class="title">
+                    Conheça o
+                    <span>
+                        Berghen Residence
+                    </span>
+                </h1>
+                    <p class="description">Viva uma Nova Experiência</p>
+                    <div id="cta_buttons">
+                        <a href="#" class="btn-default">
+                            Descubra Aqui
+                        </a>
+                        <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!" id="phone_button">
+                            <button class="btn-default">
+                                CHAME UM CORRETOR
+                            </button>
+                        </a>
+                    </div>
+                    <div class="social-media-buttons">
+                        <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                        <a href="https://www.instagram.com/qinvestimoveis/">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://www.facebook.com/qinvestimoveis/?locale=pt_BR">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://www.qinvestimoveis.com.br/">
+                            <i class="fa-solid fa-earth-americas"></i>
+                        </a>
+
+                    </div>
+                
+
+            </div>
+            <div id="banner">
+                <img src="scr/images/1.jpeg" alt="">
+
+            </div>
+
+        </section>
+
+    </main>
+    <script src="scr/javascript/script.js"></script>
 </body>
 </html>
