--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
             </div>
             <div id="cta">
                 <h1 class="title">
-                    Conheça o
-                    <span>
-                        Berghen Residence
-                    </span>
+                    Conheça o Berghen Residence
                 </h1>
-                    <p class="description">Viva uma Nova Experiência</p>
+                    <p class="description">Viva uma Nova 
+                        <br><span>Experiência</span></p>
                     <div id="cta_buttons">
                         <a href="#" class="btn-default">
                             Descubra Aqui
