--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <br><span>Experiência</span></p>
                     <div id="cta_buttons">
                         <a href="#" class="btn-default">
-                            Descubra Aqui
+                            DESCUBRA AQUI
                         </a>
                         <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!" id="phone_button">
                             <button class="btn-default">
