--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
                 </h1>
                     <p class="description">Viva uma Nova 
                         <br><span>Experiência</span></p>
-                    <div id="cta_buttons">
-                        <a href="#" class="btn-default">
-                            DESCUBRA AQUI
-                        </a>
-                        <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!" id="phone_button">
-                            <button class="btn-default">
+                        <div id="cta_buttons">
+                            <a href="#" class="btn-default">
+                                DESCUBRA AQUI
+                            </a>
+                            <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!" class="btn-default">
                                 CHAME UM CORRETOR
-                            </button>
-                        </a>
-                    </div>
+                            </a>
+                        </div>
+                        
                     <div class="social-media-buttons">
                         <a href="https://wa.me/5548999430045?text=Ol%C3%A1%2C%20vim%20pela%20Landing%20Page%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!">
                             <i class="fa-brands fa-whatsapp"></i>
@@ -102,8 +101,7 @@
 
             </div>
             <div id="banner">
-                <img src="scr/images/1.jpeg" alt="">
-
+                
             </div>
 
         </section>
