--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="scr/styles/header.css">
     <link rel="stylesheet" href="scr/styles/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <title>Berghen Residence</title>
+    <title>Berghem Residence</title>
 </head>
 <body>
     <header>
@@ -69,7 +69,7 @@
             </div>
             <div id="cta">
                 <h1 class="title">
-                    Conheça o Berghen Residence
+                    Conheça o Berghem Residence
                 </h1>
                     <p class="description">Viva uma Nova 
                         <br><span>Experiência</span></p>
