--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="scr/styles/styles.css">
     <link rel="stylesheet" href="scr/styles/header.css">
     <link rel="stylesheet" href="scr/styles/home.css">
+    <link rel="stylesheet" href="scr/styles/about.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Berghem Residence</title>
 </head>
