--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
         <section id="about">
             <h2 class = section-title>Sobre o Empreendimento</h2>
-            <h3 class="section-subtitle">Venha Viver uma Nova Experiência</h3>
+            <h3 class="section-subtitle">Venha Viver uma Nova <span>Experiência</span></h3>
             <div id="pontos">
                 <div id="p1">
-                    <div id="ponto-estilo">
-                        <i class="fa-solid fa-heart"></i>
+                    <div id="icon-logo">
+                        <i class="fa-solid fa-search"></i>
                     </div>
                     <img src="" alt="">
                     <h3 id="ponto-title">
@@ -156,8 +156,8 @@
                         - Playground ao ar livre</span>
                 </div>
                 <div id="p2">
-                    <div id="ponto-estilo">
-                        <i class="fa-solid fa-heart"></i>
+                    <div id="icon-logo">
+                        <i class="fa-solid fa-search"></i>  
                     </div>
                     <img src="" alt="">
                     <h3 id="ponto-title">
