Responsividade do about

--- a/index.html
+++ b/index.html
@@ -168,20 +168,20 @@
                         <br>- Aptos com 6 opções de tamanho e disposição
                         <br>- Opção de depósitos privativos
 
-                        <br><span>Sustentabilidade:</span>
+                        <br><br><span>Sustentabilidade:</span>
                         <br>Captação de água pluvial para jardins e limpeza
                         <br>Iluminação com lâmpadas e painéis de LED
                         <br>Vaga para veículos elétricos
 
-                        <br><span>Onde está localizado:</span>
+                        <br><br><span>Onde está localizado:</span>
                         <br>Av. Padre Antônio Luiz Dias, esquina com R. Regimento Barriga Verde - Centro, Araranguá
 
-                        <br><span>Proximidades:</span>
+                        <br><br><span>Proximidades:</span>
                         <br>Colégio Murialdo
                         <br>Giassi Supermercados
                         <br>Grêmio Fronteira Clube
 
-                        <br><span>Registro de incorporação:</span>
+                        <br><br><span>Registro de incorporação:</span>
                         <br>89.363 - RI Araranguá
 
                     </span>
