--- a/index.html
+++ b/index.html
@@ -198,14 +198,25 @@
             <h2 class="section-title">Galeria de Fotos</h2>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="scr/images/2.jpeg" alt="Descrição da imagem 1"></div>
-                    <div class="swiper-slide"><img src="scr/images/8.jpeg" alt="Descrição da imagem 2"></div>
-                    <!-- Continue para todas as imagens -->
+                    <div class="swiper-slide"><img src="scr/images/1.jpg" alt="Descrição da imagem 1"></div>
+                    <div class="swiper-slide"><img src="scr/images/2.jpeg" alt="Descrição da imagem 2"></div>
+                    <div class="swiper-slide"><img src="scr/images/3.jpeg" alt="Descrição da imagem 3"></div>
+                    <div class="swiper-slide"><img src="scr/images/4.jpeg" alt="Descrição da imagem 4"></div>
+                    <div class="swiper-slide"><img src="scr/images/5.jpeg" alt="Descrição da imagem 5"></div>
+                    <div class="swiper-slide"><img src="scr/images/6.jpeg" alt="Descrição da imagem 6"></div>
+                    <div class="swiper-slide"><img src="scr/images/7.jpeg" alt="Descrição da imagem 7"></div>
+                    <div class="swiper-slide"><img src="scr/images/8.jpeg" alt="Descrição da imagem 8"></div>
+                    <div class="swiper-slide"><img src="scr/images/9.jpeg" alt="Descrição da imagem 9"></div>
+                    <div class="swiper-slide"><img src="scr/images/z.jpeg" alt="Descrição da imagem z"></div>
+                    <div class="swiper-slide"><img src="scr/images/b.jpeg" alt="Descrição da imagem b"></div>
+                    <div class="swiper-slide"><img src="scr/images/c.jpeg" alt="Descrição da imagem c"></div>
+                    <div class="swiper-slide"><img src="scr/images/d.jpeg" alt="Descrição da imagem d"></div>
+                    <div class="swiper-slide"><img src="scr/images/e.jpeg" alt="Descrição da imagem e"></div>
+                    <div class="swiper-slide"><img src="scr/images/f.jpeg" alt="Descrição da imagem f"></div>
+                    
                 </div>
-                <!-- Botões de navegação -->
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <!-- Paginação opcional -->
                 <div class="swiper-pagination"></div>
             </div>
         </section>
@@ -214,7 +225,7 @@
     </main>
     <script>
         const swiper = new Swiper('.swiper-container', {
-            loop: true, // Permite rotação infinita
+            loop: true,
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
@@ -223,7 +234,7 @@
                 el: '.swiper-pagination',
                 clickable: true,
             },
-            slidesPerView: 1, // Quantidade de slides visíveis por vez
+            slidesPerView: 1,
         });
     </script>
     <script src="scr/javascript/script.js"></script>
